# create-neon-api

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/neon-api-template/: .env.example  .gitignore  Cargo.toml  README.md  justfile
src/neon-api-template/migrations/: schema.sql
src/neon-api-template/src/: auth.rs  config.rs  data_api.rs  errors.rs  lib.rs  main.rs  models.rs
src/neon-api-template/src/handlers/: auth.rs  user.rs
src/neon-api-template/src/middleware/: auth.rs
